# ellipticoind

./: .env.sample  .gitignore  Cargo.toml  README.md  cli.yml  docker-compose.yml  dump.cbor  network-changes.patch  start-up-changes.patch  state-dump.cbor  transactions.cbor
contracts/token/: Cargo.toml  package.json
contracts/token/scripts/: build.sh
contracts/token/src/: errors.rs  ethereum.rs  hashing.rs  lib.rs  token.rs
contracts/token/src/wasm/: telegram_bot.wasm
ec-client/: Cargo.toml
elipticoin-server/: Dockerfile  env_setup.py
ellipticoin_contracts/: Cargo.toml
ellipticoin_contracts/src/: constants.rs  contract.rs  crypto.rs  hash_onion.rs  helpers.rs  lib.rs  transaction.rs
ellipticoin_contracts/src/amm/: mod.rs  validations.rs
ellipticoin_contracts/src/bridge/: mod.rs
ellipticoin_contracts/src/ellipticoin/: issuance.rs  mod.rs
ellipticoin_contracts/src/exchange/: mod.rs  validations.rs
ellipticoin_contracts/src/governance/: mod.rs  validations.rs
ellipticoin_contracts/src/order_book/: mod.rs
ellipticoin_contracts/src/system/: mod.rs
ellipticoin_contracts/src/token/: macros.rs  mod.rs
ellipticoin_macros/src/: lib.rs
ellipticoin_peerchain_ethereum/: Cargo.toml
ellipticoin_peerchain_ethereum/src/: constants.rs  lib.rs  transaction.rs
ellipticoin_peerchain_ethereum/tests/: ellipticoin_peerchain_ethereum.rs
ellipticoin_system_contract/: Cargo.toml
ellipticoin_system_contract/src/: errors.rs  lib.rs  system.rs
ellipticoin_system_contract/src/wasm/: elliptcoin_system_contract.wasm
ellipticoin_test_framework/: Cargo.toml
ellipticoin_test_framework/src/: constants.rs  lib.rs  test_backend.rs  test_db.rs
ellipticoin_test_framework/src/constants/: actors.rs  mod.rs  tokens.rs
ellipticoin_types/: Cargo.toml
ellipticoin_types/src/: db.rs  lib.rs  traits.rs
ellipticoind/: .env-sample  Cargo.toml  package-lock.json  package.json  rustfmt.toml
ellipticoind/migrations/2019-12-04-144742_create_blocks/: down.sql  up.sql
ellipticoind/migrations/2019-12-04-144748_create_transactions/: up.sql
ellipticoind/migrations/2020-04-19-163324_create_hash_onion/: down.sql  up.sql
ellipticoind/migrations/2020-12-02-155418_create_ledger/: down.sql  up.sql
ellipticoind/src/: block_broadcaster.rs  blockchain.rs  bootnodes.txt  broadcaster.rs  cli.yml  config.rs  consensus.rs  constants.rs  crypto.rs  db.rs  dump_v2_genesis.rs  error.rs  hash_onion.rs  helpers.rs  legacy.rs  lib.rs  main.rs  miner.rs  models.rs  network.rs  peerchains.rs  pg.rs  run_loop.rs  schema.rs  start_up.rs  state.rs  static_files.rs  sub_commands.rs  system_contracts.rs  transaction.rs  transaction_processor.rs
ellipticoind/src/api/: addresses.rs  app.rs  blocks.rs  graphql.rs  helpers.rs  memory.rs  mod.rs  mutations.rs  query_root.rs  routes.rs  storage.rs  transactions.rs  types.rs  views.rs  websocket.rs
ellipticoind/src/api/types/: block.rs  misc.rs  mod.rs  token.rs  transaction.rs
ellipticoind/src/client/: helpers.rs  mod.rs
ellipticoind/src/db/: memory_backend.rs  mod.rs  sled_backend.rs
ellipticoind/src/models/: address.rs  balance.rs  block.rs  hash_onion.rs  ledger_entry.rs  mod.rs  token.rs  transaction.rs
ellipticoind/src/system_contracts/: api.rs  macros.rs  mod.rs  test_api.rs
ellipticoind/src/system_contracts/bridge/: constants.rs  mod.rs
ellipticoind/src/system_contracts/ellipticoin/: errors.rs  ethereum.rs  issuance.rs  mod.rs
ellipticoind/src/system_contracts/exchange/: constants.rs  errors.rs  mod.rs
ellipticoind/src/system_contracts/token/: constants.rs  mod.rs
ellipticoind/src/wasm/: ellipticoin_system_contract.wasm  token.wasm
ellipticoind/tests/: helpers.rs  integration_tests.rs
ellipticoind/tests/helpers/: constants.rs  mod.rs
ellipticoind_macros/: Cargo.toml
ellipticoind_macros/src/: lib.rs
ellipticoind_types/: Cargo.toml
ellipticoind_types/src/: api.rs  bytes.rs  constants.rs  errors.rs  helpers.rs  lib.rs  macros.rs  types.rs
hashfactor/: Cargo.toml
hashfactor/src/: lib.rs  main.rs
migrations/: Cargo.toml
migrations/2019-12-04-144742_create_blocks/: down.sql  up.sql
migrations/2019-12-04-144748_create_transactions/: down.sql  up.sql
migrations/2020-12-02-155418_create_ledger/: down.sql  up.sql
network/: Cargo.toml
network/src/: lib.rs
src/: backend.rs  block_broadcaster.rs  bootnodes-local.txt  bootnodes.yaml  broadcaster.rs  cli.yml  config.rs  constants.rs  helpers.rs  index.html  lib.rs  main.rs  miner.rs  models.rs  network.rs  run_loop.rs  schema.rs  slasher.rs  start_up.rs  state.rs  sub_commands.rs  system_contracts.rs  transaction.rs  transaction_processor.rs  types.rs
src/api/: addresses.rs  app.rs  blocks.rs  graphql.rs  helpers.rs  memory.rs  middleware.rs  mod.rs  mutations.rs  query_root.rs  routes.rs  state.rs  storage.rs  transactions.rs  types.rs  views.rs  websocket.rs
src/client/: helpers.rs  mod.rs
src/models/: block.rs  hash_onion.rs  mod.rs  transaction.rs  transaction_pool.rs
src/src/: backend.rs  env.rs  helpers.rs  lib.rs  transaction.rs
src/system_contracts/: api.rs  mod.rs  test_api.rs
src/system_contracts/bridge/: errors.rs  mod.rs
src/system_contracts/ellipticoin/: errors.rs  hashing.rs  issuance.rs  mod.rs
src/system_contracts/exchange/: constants.rs  errors.rs  mod.rs
src/system_contracts/token/: constants.rs  errors.rs  mod.rs
src/vm/: backend.rs  call.rs  error.rs  externals.rs  gas.rs  helpers.rs  import_resolver.rs  memory.rs  mod.rs  redis.rs  result.rs  state.rs  transaction.rs
src/vm/contracts/: token.rs
src/vm/vm/: call.rs  gas.rs  (+4 more)
src/wasm/: token.wasm
token/: Cargo.toml  build.sh  package.json
token/scripts/: build.sh
token/src/: errors.rs  ethereum.rs  lib.rs  token.rs
token/test/: base-token-test.js
token/test/support/: BaseContractClient.js
transaction_processor/: Cargo.toml
transaction_processor/src/: main.rs  system_contracts.rs
vm/: Cargo.toml
vm/src/: backend.rs  env.rs  helpers.rs  lib.rs  result.rs  state.rs  transaction.rs
vm/src/vm/: call.rs  externals.rs  import_resolver.rs  memory.rs  mod.rs
