[package]
name = "ellipticoind"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "*", features = ["unstable", "attributes"]}
broadcaster = "*"
base64 = "*"
clap = "3.0.0-beta.1"
diesel = { version = "*", features = ["postgres", "r2d2"] }
diesel_migrations = "*"
dotenv = "*"
ed25519-dalek = "1.0.0-pre.4"
ellipticoin = {path = "../rust-ellipticoin"}
futures = "*"
hex = "*"
http-service = "*"
indicatif = "*"
lazy_static = "*"
libsecp256k1 = "*"
num-bigint = { version = "*", features = ["serde"] }
num-traits = "*"
r2d2_redis = { git = "https://github.com/sorccu/r2d2-redis" }
rand = {version = "0.7.3", features = ["small_rng"]}
rocksdb = "*"
serde = { version = "*", features = ["derive"] }
serde_bytes = "*"
serde_cbor = "*"
serde_yaml = "*"
sha2 = "*"
surf = "*"
tide = {version = "*", features = ["logger"]}
time = "*"
tiny-keccak = {version = "2.0.1", features = ["keccak"] }
wasm-rpc = { version = "*"}
wasm-rpc-macros = { version = "*"}

[dev-dependencies]
ellipticoin-test-framework = "0.1.4"


[profile.dev]
panic = 'unwind'
