[package]
name = "ellipticoin_peerchain_ethereum"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-std = {version = "1.9.0", features = ["unstable", "attributes"]}
base64 = "*"
ellipticoin_contracts = {path = "../ellipticoin_contracts"}
ellipticoin_types = {path = "../ellipticoin_types"}
hex = "*"
hex-literal = "0.2"
k256 = {version = "0.7.2", features= ["ecdsa", "sha256", "ecdsa-core", "keccak256"]}
lazy_static = "*"
num-bigint = "*"
num-traits = "0.2.14"
phf = { version = "0.7.24", features = ["macros"] }
serde = { version = "*", features = ["derive"] }
serde_cbor = "*"
serde_json = "*"
sha3 = "*"
surf = "*"
