[package]
name = "ellipticoin_system_contract"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[dev-dependencies]
ellipticoin-test-framework = {"path" = "../../rust-ellipticoin-test-framework"}
ellipticoin-mock-api = {"path" = "../../rust-ellipticoin-mock-api"}

[dependencies]
lazy_static = "1.3.0"
ellipticoin = {"path" = "../../rust-ellipticoin"}
wee_alloc = { git = "https://github.com/rustwasm/wee_alloc" }
wasm-rpc = {"path" = "../../rust-wasm-rpc/wasm-rpc"}
wasm-rpc-macros = {"path" = "../../rust-wasm-rpc/wasm-rpc-macros"}
