[package]
name = "ellipticoind"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.0.0-alpha.3"
async-std = {version = "1.6.0", features = ["unstable", "attributes"]}
async-tungstenite = {git = "https://github.com/sdroege/async-tungstenite.git" }
async-compression = { version = "0.3.2", features = ["futures-bufread", "bzip2"] }
base64 = "0.10.1"
bytes = "0.5.2"
bzip2 = "0.3.3"
serde_yaml = "0.8.12"
clap = { git = "https://github.com/clap-rs/clap.git" }
diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.9.0"
ed25519-dalek = "1.0.0-pre.3"
futures = "0.3.5"
futures-core-preview = "0.3.0-alpha.19"
futures-timer = "2.0.2"
hex-literal = "0.2.1"
futures-util = "0.3.4"
hex = "0.4.0"
http-service = "*"
lazy_static = "1.4.0"
mime = "0.3"
rand = "*"
r2d2_redis = { git = "https://github.com/sorccu/r2d2-redis" }
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb"}
serde = { version = "1.0.90", features = ["derive"] }
serde_bytes = "0.11.1"
indicatif = "0.14.0"
serde_cbor = { git = "https://github.com/pyfisch/cbor" }
sha2 = "0.8.0"
tar = "0.4.26"
tide = { git = "https://github.com/masonforest/tide" }
tungstenite = { version = "0.10.0", default-features = false}
url = "*"
vm = { path = "../vm" }
warp = {git = "https://github.com/masonforest/warp.git", branch = "add-cbor-mime-type"}
[dev-dependencies]
reqwest = {git = "https://github.com/seanmonstar/reqwest.git" }
tokio-test = "0.0.0"
[profile.dev]
panic = 'unwind'
