[package]
name = "ellipticoind"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-std = {version = "1.9.0", features = ["unstable", "attributes"]}
base64 = "0.13.0"
broadcaster = "1.0.0"
clap = "3.0.0-beta.1"
ctrlc = "3.1.8"
dotenv = "0.15.0"
ellipticoin_contracts = {path = "../ellipticoin_contracts"}
ellipticoin_macros = {path = "../ellipticoin_macros"}
ellipticoin_peerchain_ethereum = {path = "../ellipticoin_peerchain_ethereum"}
ellipticoin_types = {path = "../ellipticoin_types"}
futures = "0.3.12"
graphql_client = "0.9.0"
hex = "0.4.2"
hex-literal = "*"
http-types = "2.10.0"
indicatif = "0.15.0"
juniper = { git = "https://github.com/graphql-rust/juniper" }
k256 = {version = "0.7.2", features= ["ecdsa", "sha256", "ecdsa-core", "keccak256"]}
lazy_static = "1.4.0"
num-bigint = { version = "*", features = ["serde"] }
num-traits = "0.2.12"
once_cell = "1.7.2"
rand = {version = "0.7.3", features = ["small_rng"]}
serde = { version = "1.0.120", features = ["derive"] }
serde_bytes = "0.11.5"
serde_cbor = "0.11.1"
serde_eth = "0.1.0"
serde_json = "1.0.59"
sha2 = "0.9.1"
sha3 = "*"
sled = "0.34.6"
surf = "2.1.0"
thiserror = "*"
tide = { version = "0.16.0", features = ["logger"]}
time = "0.2.22"

[dev-dependencies]
ellipticoin-test-framework = {path = "../ellipticoin_test_framework"}
maplit = "1.0.2"

# [profile.dev]
# panic = 'unwind'
