[package]
name = "network"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
async-std = {version = "1.0", features = ["unstable", "attributes"] }
futures = "0.3.1"
futures-timer = "2.0.2"
libp2p = { git = "https://github.com/masonforest/rust-libp2p.git", branch = "stable-futures" }
