[package]
name = "network"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
async-std = {version = "1.4.0", features = ["unstable"]}
futures = "0.3.5"
ed25519-dalek = "1.0.0-pre.3"
futures-timer = "2.0.2"
serde_cbor = { git = "https://github.com/pyfisch/cbor" }
serde = { version = "1.0.90", features = ["derive"] }
rand = "*"
