[package]
name = "token"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[dev-dependencies]
ellipticoin-test-framework = { path = "../../rust-ellipticoin-test-framework" }

[dependencies]
lazy_static = "1.3.0"
ellipticoin = "0.1.6"
wee_alloc = { git = "https://github.com/rustwasm/wee_alloc" }
wasm-rpc = "0.2.14"
wasm-rpc-macros = "0.2.14"
