[package]
name = "token"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false

[dev-dependencies]
ellipticoin-test-framework = "0.1.3"
hex = "0.4.0"

[dependencies]
lazy_static = "1.3.0"
ellipticoin = "0.1.6"
libsecp256k1 = "0.3.4"
tiny-keccak = {version = "2.0.1", features = ["keccak"] }
mock_ellipticoin = { path = "../../rust-mock-ellipticoin"}
wee_alloc = { git = "https://github.com/rustwasm/wee_alloc" }
wasm-rpc = "0.2.14"
wasm-rpc-macros = "0.2.14"
