[package]
name = "token"
version = "0.1.0"
authors = ["Mason Fischer <mason@kissr.co>"]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
codegen-units = 1

[dev-dependencies]
mock_ellipticoin = { path = "../../../rust-mock-ellipticoin"}
ellipticoin-test-framework = { path = "../../../rust-ellipticoin-test-framework"}
hex = "0.4.0"

[dependencies]
base64 = "*"
ellipticoin = { path = "../../../rust-ellipticoin"}
hex = "*"
lazy_static = "1.3.0"
libsecp256k1 = "0.3.4"
rand = {version = "0.7.3", features = ["small_rng"]}
serde = { version = "1.0.114", features = ["derive"] }
sha2 = "0.8.1"
tiny-keccak = {version = "2.0.1", features = ["keccak"] }
wasm-rpc = { path = "../../../rust-wasm-rpc/wasm-rpc"}
wasm-rpc-macros =  { path = "../../../rust-wasm-rpc/wasm-rpc-macros"}
